--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,25 @@ a:hover {
   color: rgb(134, 230, 230);
 }
 
+button {
+  display: inline-block;
+  margin: 5px;
+  background-color: aqua;
+  cursor: pointer;
+  border-radius: 7.5px;
+  border: 0;
+  padding: 2px 10px;
+  color: black;
+  font-size: 15px;
+  transition: background-color 0.2s;
+}
+
+button:hover {
+  box-shadow: 4px 3px 6px rgb(134, 230, 230);
+}
+
+
+
 li {
   padding-bottom: 3px;
   color: white;
@@ -50,22 +69,48 @@ input {
   margin: 0 auto;
 }
 
-button {
-  display: inline-block;
-  font-family: sans-serif;
-  background-color: teal;
-  border-radius: 10px;
-  border: 3px double #cccccc;
-  color: #eeeeee;
-  text-align: center;
-  font-size: 15px;
-  padding: 20px;
-  width: 200px;
-  margin-top: 3px;
+.choices button {
+  display: block;
 }
 
-button:hover {
-  box-shadow: 4px 3px 6px greenyellow;
+input[type="text"] {
+  font-size: 100%;
+}
+
+ol {
+  padding-left: 0px;
+  max-height: 400px;
+  overflow: auto;
+}
+
+li {
+  padding: 5px;
+  list-style: decimal inside none;
+}
+
+.wrapper {
+  margin: 100px auto 0 auto;
+  max-width: 600px;
+}
+
+.hide {
+  display: none;
+}
+
+.start {
+  text-align: center;
+}
+
+.submitScore {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+}
+
+.quizTimer {
+ position: absolute;
+ top: 10px;
+ right: 10px;
 }
 
 #startpage {
@@ -74,14 +119,7 @@ button:hover {
   align-items: center;
 }
 
-#timer {
-  font-family: sans-serif;
-  background-color: purple;
-  color: #eeeeee;
-  font-size: x-large;
-  text-shadow: 0.5px 0.5px black;
-  text-align: center;
-}
+
 #quiz {
   display: none;
 }
