--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,3 @@
-:root {
-  background-color: beige;
-}
-
 body {
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-size: 120%;
@@ -107,93 +103,17 @@ li {
   left: 10px;
 }
 
+.feedback {
+  font-size: 120%;
+  margin-top: 20px;
+  padding-top: 10px;
+  color: gray;
+  border-top: 2px solid white;
+}
+
 .quizTimer {
  position: absolute;
  top: 10px;
  right: 10px;
 }
 
-#startpage {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-
-#quiz {
-  display: none;
-}
-
-#result {
-  display: none;
-}
-
-#gameover {
-  text-align: center;
-  display: none;
-  flex-direction: column;
-  align-items: center;
-}
-
-#highScore {
-  height: 1.5rem;
-  border: groove 2px;
-}
-
-#high-scorePage {
-  display: none;
-  width: 50%;
-  border: solid;
-  border-color: silver;
-  border-bottom-style: groove;
-  padding-bottom: 0.3rem;
-  background: lightskyblue;
-}
-
-#highscore-header {
-  display: flex;
-  justify-content: space-around;
-  border-bottom-style: outset;
-  margin-bottom: 0.5rem;
-  background-color: purple;
-  color: black;
-  font-family: sans-serif;
-}
-#highscoreContainer {
-  height: 100%;
-  width: 100%;
-  display: none;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-#initials {
-  margin: 0.5rem;
-  height: 1.75rem;
-}
-
-#highscore-initials {
-  display: inline-block;
-  padding-left: 9.5rem;
-  font-family: sans-serif;
-  font-weight: bold;
-}
-
-#highscore-score {
-  float: right;
-  padding-right: 8.75rem;
-  font-family: sans-serif;
-  font-weight: bold;
-}
-
-#finalScore {
-  padding-bottom: 0.5rem;
-  font-size: x-large;
-  font-family: sans-serif;
-  font-weight: bold;
-}
-
-#endGameBtns {
-  display: none;
-}
