--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,18 @@
+html {
+  background-image: url(../media/FeatureA24-Land-700x505.png);
+  height: 100%;
+  background-position: center;
+}
+
 body {
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family: Arial;
   font-size: 120%;
 }
 
 a {
   color: aqua;
+  background-color: black;
+  text-decoration: none;
   transition: color 0.2s;
 }
 
@@ -15,54 +23,18 @@ a:hover {
 button {
   display: inline-block;
   margin: 5px;
-  background-color: aqua;
   cursor: pointer;
+  font-size: 100%;
+  background-color: aqua;
   border-radius: 7.5px;
-  border: 0;
   padding: 2px 10px;
   color: black;
-  font-size: 15px;
+  border: 0;
   transition: background-color 0.2s;
 }
 
 button:hover {
-  box-shadow: 4px 3px 6px rgb(134, 230, 230);
-}
-
-
-
-li {
-  padding-bottom: 3px;
-  color: white;
-  text-shadow: 1.5px 1px 3px purple;
-  list-style-type: none;
-}
-
-p {
-  color: rgb(0, 0, 0);
-  text-shadow: 0.5px 0.5px white;
-  text-align: center;
-  font-size: xx-large;
-  font-family: sans-serif;
-}
-
-h2 {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  margin-top: 5px;
-}
-
-input {
-  text-align: center;
-}
-
-.container {
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  max-width: 80rem;
-  margin: 0 auto;
+  background-color: 4px 3px 6px rgb(134, 230, 230);
 }
 
 .choices button {
@@ -84,6 +56,10 @@ li {
   list-style: decimal inside none;
 }
 
+li:nth-child(odd) {
+  background-color: #bdf5f7;
+}
+
 .wrapper {
   margin: 100px auto 0 auto;
   max-width: 600px;
@@ -97,23 +73,24 @@ li {
   text-align: center;
 }
 
-.submitScore {
+.scores {
   position: absolute;
   top: 10px;
   left: 10px;
 }
 
 .feedback {
+  font-style: italic;
   font-size: 120%;
   margin-top: 20px;
   padding-top: 10px;
   color: gray;
-  border-top: 2px solid white;
+  border-top: 2px solid #ccc;
 }
 
-.quizTimer {
- position: absolute;
- top: 10px;
- right: 10px;
+.timer {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background-color: aqua;
 }
-
