--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,6 @@ html {
   background-repeat: inherit;
 }
 
-header {
-  
-}
-
 #grid1 {
   background-color: white;
   display: grid;
@@ -14,16 +10,20 @@ header {
   grid-template-rows: 100px;
 }
 
-#grid1{
-
+#grid2 {
+  margin: 100px auto 0 auto;
+  max-width: 600px;
+  background-color: blue;
 }
 
-#headingcontainer, .heading, img {
-  height: 20;
+.start {
+  text-align: center;
+  grid-template-columns: 900px;
+  margin: 100px;
 }
 
 body {
-  font-family: 'Aclonica';
+  font-family: 'Noto Serif Telugu', serif;
   font-size: 22px;
   background-color: yellow; 
   /* background-image: url(../media/morocco.png);
@@ -94,7 +94,7 @@ li:nth-child(odd) {
   background-color: #bdf5f7;
 }
 
-.wrapper {
+#wrapper {
   margin: 100px auto 0 auto;
   max-width: 600px;
 }
@@ -103,9 +103,7 @@ li:nth-child(odd) {
   display: none;
 }
 
-.start {
-  text-align: center;
-}
+
 
 .scores {
   display: grid;
