--- a/css/style.css
+++ b/css/style.css
@@ -1,26 +1,54 @@
-html {
+ /* html {
   background-image: url(../media/FeatureA24-Land-700x505.png);
   background-repeat: inherit;
-}
+} */
 
 #grid1 {
   background-color: white;
   display: grid;
-  place-items: center;
+  align-items: center;
   grid-template-rows: 100px;
+}
+
+.heading {
+  align-items: center;
 }
 
 #grid2 {
   margin: 100px auto 0 auto;
-  max-width: 600px;
+  max-width: 700px;
+  display: grid;
   background-color: blue;
+  grid-template-rows: 400px;
+}
+
+#qscontainer {
+  margin: 100px;
 }
 
 .start {
   text-align: center;
-  grid-template-columns: 900px;
   margin: 100px;
 }
+
+.hide {
+  display: none;
+}
+
+#grid3 {
+  display: grid;
+  background-color: #ccc;
+}
+
+.feedback {
+  font-style: italic;
+  font-size: 120%;
+  margin-top: 20px;
+  padding-top: 10px;
+  color: gray;
+  border-top: 2px solid #ccc;
+}
+
 
 body {
   font-family: 'Noto Serif Telugu', serif;
@@ -99,9 +127,7 @@ li:nth-child(odd) {
   max-width: 600px;
 }
 
-.hide {
-  display: none;
-}
+
 
 
 
@@ -114,19 +140,11 @@ li:nth-child(odd) {
   
 }
 
-.scores
 
-.feedback {
-  font-style: italic;
-  font-size: 120%;
-  margin-top: 20px;
-  padding-top: 10px;
-  color: gray;
-  border-top: 2px solid #ccc;
-}
 
-.timer {
+.timercontainer {
   display: grid;
+  grid-template-columns: 200px;
   position: absolute;
   top: 10px;
   right: 10px;
